vesrion commit descentralisee des configs des mircro services

--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,19 @@
 global.params.p1= 8888
 global.params.p2= 9999
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#voir les requettes sql dans la console
+spring.jpa.show-sql: true
+#VOIR LE LOGO DE SPRNG DANS LA CONSOLE
+#spring.main.banner-mode=off
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.graphql.graphiql.enabled=true
+spring.cloud.config.enabled =true
+spring.discovery.enabled= true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+management.endpoints.web.exposure.include=*
