--- a/patient-service.properties
+++ b/patient-service.properties
@@ -1,2 +1,3 @@
 patient.params.x1=02
 patient.params.x2=32
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/PATIENT-MEDECIN_DB?createDatabaseIfNotExist=true
