--- a/application.properties
+++ b/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.cloud.config.server.git.uri = file:///D:/INFO-L3-2023-2024/TPs/Hospital-using-microservice/config-repo>
+spring.cloud.config.server.git.uri =https://github.com/bendevtech16/hospital-config-repo
 #voir les requettes sql dans la console
 spring.jpa.show-sql: true
 #VOIR LE LOGO DE SPRNG DANS LA CONSOLE
